kubernetes/overlays/prod/epub-seed-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reader-deployment
spec:
  template:
    spec:
