kubernetes/overlays/prod/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reader-route
spec:
  hostnames:
    - reader.apps.lab
